# toolhive

./: .chainsaw.yaml  .codespellrc  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yaml  .ko.yaml  .pre-commit-config.yaml  BRANCH_SPLIT_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  CUSTOM_ATTRIBUTES_EXAMPLE.md  Cargo.toml  DEBUG_VMCP_OPTIMIZER.md  Dockerfile  IMPLEMENTATION_OPTIMIZER_TOOLS.md  MAINTAINERS.md  Makefile  PROJECT  README.md  SECURITY.MD  SECURITY.md  TRIAGE_GRAPH.md  Taskfile.yml  VMCP_FUTURE_ENHANCEMENTS.md  bundle.Dockerfile  cli-rework.patch  codecov.yaml  copilot_instructions.md  coverage.sh  cr.yaml  crd-ref-config.yaml  ct-install.yaml  ct.yaml  dco.md  deprecation-removal-plan.md  e2e_test_plan.md  go.mod  go.sum  index.yaml  (+18 more)
.claude/: settings.json
.github/: CODEOWNERS  CODEOWNERS.proposed  REVIEWERS.md  ko-ci.yml  license-header.txt  pull_request_template.md
RFC-0023-issues/: README.md
bundle/: IMPLEMENTATION_SUMMARY.md  ONBOARDING.md  README.md
cmd/: main.go
docs/: README.md  authz.md  aws-sts-one-pager.md  aws-sts-setup.md  cli-best-practices.md  docs.go  domain-model.md  error-handling.md  ingress.md  logging.md  middleware.md  migrate-to-self-hosted-k8s.md  observability.md  redis-storage.md  remote-mcp-authentication.md  running-toolhive-in-kind-cluster.md  runtime-implementation-guide.md  runtime-version-customization.md  telemetry-migration-guide.md  telemetry-migration.md  usage-analytics.md  vmcp-implementation-summary.md
examples/: authz-config-with-entities.json  authz-config.json  authz-httpv1-config.yaml  mcpserver-with-audit.yaml  registry-with-remote-servers.json  vmcp-config-invalid.yaml  vmcp-config-optimizer.yaml  vmcp-config.yaml
hack/: boilerplate.go.txt  extract-crd-schemas.mjs  package-lock.json  package.json
operator/: index.html
poc-dockerfile/: Dockerfile.vmcp
sample-mcp-servers/: README.md  USAGE.md  basic-permission-profile.json  build-and-run.sh  simple-test.sh  test-echo.sh
(+4421 files in other folders)
