[package]
name = "mcp-lok"
version = "0.1.0"
edition = "2021"
description = "A lightweight, secure, and fast manager for MCP (Model Context Protocol) servers"
authors = ["MCP-LOK Team"]
license = "Apache-2.0"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# HTTP client and server
hyper = { version = "0.14", features = ["full"] }
hyper-reverse-proxy = "0.5"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
http = "0.2"

# Unix socket support
hyperlocal = "0.8"
tokio-util = { version = "0.7", features = ["codec"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
futures = "0.3"
bytes = "1.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
url = "2.5"
tempfile = "3.8"
async-trait = "0.1"
prettytable = "0.10"
chrono = "0.4"
urlencoding = "2.1"

[dev-dependencies]
mockall = "0.11"
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.0"
test-log = "0.2"
